--- a/index.html
+++ b/index.html
@@ -32,26 +32,32 @@
 
   <!-- Thumbnail images -->
   <div class="row">
-    <div class="column">
-      <a href="php/Insitel/Auce/Auce_1.php"><img class="demo cursor" src="img/index/Auce.jpg" style="width:100%" onclick="currentSlide(1)" alt="Auce"></a>
+    <div class="uno">     
+      <a href="php/Insitel/Auce/Auce_1.php"><img class="demo cursor uno" src="img/index/Auce.jpg" style="width:100%" onclick="currentSlide(1)" alt="Auce">
+      </a>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/index/acueducto.jpg" style="width:100%" onclick="currentSlide(2)" alt="Acueducto">
+    <div class="dos">
+      <a href=""><img class="demo cursor dos" src="img/index/acueducto.jpg" style="width:100%" onclick="currentSlide(2)" alt="Acueducto">
+      </a>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/index/antenas.jpg" style="width:100%" onclick="currentSlide(3)" alt="Antenas">
+    <div class="tres">
+      <a href=""><img class="demo cursor tres" src="img/index/antenas.jpg" style="width:100%" onclick="currentSlide(3)" alt="Antenas">
+      </a>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/index/Chingaza.jpg" style="width:100%" onclick="currentSlide(4)" alt="chingaza">
+    <div class="cuatro">
+      <a href=""><img class="demo cursor cuatro" src="img/index/Chingaza.jpg" style="width:100%" onclick="currentSlide(4)" alt="chingaza">
+      </a>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/index/gabinete.jpg" style="width:100%" onclick="currentSlide(5)" alt="gabinete">
+    <div class="cinco">
+      <a href=""><img class="demo cursor cinco" src="img/index/gabinete.jpg" style="width:100%" onclick="currentSlide(5)" alt="gabinete">
+      </a>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="img/index/radios.jpg" style="width:100%" onclick="currentSlide(6)" alt="Radios">
+    <div class="seis">
+      <a href=""><img class="demo cursor seis" src="img/index/radios.jpg" style="width:100%" onclick="currentSlide(6)" alt="Radios">
+      </a>
     </div>
   </div>
-</div>
+
 
 
 <!-- Container for the image gallery -->
@@ -97,8 +103,7 @@
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  
+</div>  
 </aside>
 
 
